feat(flow): stabilize paths and coverage